# CP-next

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.js  bench.sh  comp.sh  lezer.grammar  package-lock.json  package.json  packages.dhall  raw-loader.d.ts  spago.dhall  spago.yaml  start.mjs  tsconfig.json  webpack.config.js  zord.grammar  zord.js
ANTLRParser/: CPnextASTMaker.js  CPnextLexer.g4  CPnextLexer.js  CPnextParser.g4  CPnextParser.js  CPnextParserVisitor.js  index.js
ZordParser/: ZordASTMaker.js  ZordLexer.g4  ZordLexer.js  ZordParser.g4  ZordParser.js  ZordParserVisitor.js  index.js
antlr/: CPLexer.g4  CPParser.g4  CPVisitor.js  index.js
backend/: .gitignore  Gemfile
benchmarks/: chart.cp  doc.lib  fact.cp  fib.cp  fractal.cp  minipedia.cp  nbody.cp  region.cp  sieve.cp
comparison/: fact.mjs  fib.mjs  nbody.mjs  region.mjs  region.ts  region_0.cp  region_1.cp  region_10.cp  region_2.cp  region_3.cp  region_4.cp  region_5.cp  region_6.cp  region_7.cp  region_8.cp  region_9.cp  sieve.mjs
coq/: README.md
examples/: array.cp  array.zord  attributed_i.cp  attributed_i.zord  attributed_l.cp  attributed_l.zord  attributed_s.cp  attributed_s.zord  bench.cp  bench.zord  calc.cp  charts.cp  charts.zord  coercion.cp  color.mzord  conflict.cp  conflict.zord  doc.cp  (+48 more)
theories/: README.md  cp-next.opam
theories/coq/: ElaborationSoundness.v  Infrastructure.v  LibTactics.v  Makefile  TargetTypeSafety.v  Translation.v  _CoqProject  rules_inf.v  syntax_ott.v
theories/ott/: source.ott  target.ott
theories/pdf/: Makefile  rec_doc.tex  record.tex
(+233 files in other folders)
